--- a/Netflix_stock_analysis.ipynb
+++ b/Netflix_stock_analysis.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOil/tN8meVA97slOT2/Ipf",
+      "authorship_tag": "ABX9TyOZQcC1bpzhQg9Zv+3YCQQe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,7 +52,7 @@
           "height": 206
         },
         "id": "SSInX3Q49Zz0",
-        "outputId": "59cd63d4-7167-4abb-de1f-bdb7215a36f7"
+        "outputId": "12abc987-0fb5-4490-884c-8b1c07614679"
       },
       "execution_count": 2,
       "outputs": [
@@ -76,7 +76,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-3ee87f54-2423-4c63-a01e-bd06fd131ed3\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-6f36d8d6-991f-4a06-a6bc-4e090b110cd3\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -161,7 +161,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3ee87f54-2423-4c63-a01e-bd06fd131ed3')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6f36d8d6-991f-4a06-a6bc-4e090b110cd3')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -213,12 +213,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-3ee87f54-2423-4c63-a01e-bd06fd131ed3 button.colab-df-convert');\n",
+              "        document.querySelector('#df-6f36d8d6-991f-4a06-a6bc-4e090b110cd3 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-3ee87f54-2423-4c63-a01e-bd06fd131ed3');\n",
+              "        const element = document.querySelector('#df-6f36d8d6-991f-4a06-a6bc-4e090b110cd3');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -238,8 +238,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-40ff910e-4a60-4368-92cb-02614f787677\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-40ff910e-4a60-4368-92cb-02614f787677')\"\n",
+              "<div id=\"df-b45918a0-a026-434e-83e2-89743320b454\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-b45918a0-a026-434e-83e2-89743320b454')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -358,7 +358,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-40ff910e-4a60-4368-92cb-02614f787677 button');\n",
+              "        document.querySelector('#df-b45918a0-a026-434e-83e2-89743320b454 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -382,6 +382,40 @@
     {
       "cell_type": "code",
       "source": [
+        "#data types of each attribute in the dataset\n",
+        "stock.dtypes"
+      ],
+      "metadata": {
+        "id": "vddOyszOreB2",
+        "outputId": "a1175862-0f62-468f-bbc3-3f72f749e5f9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Date         datetime64[ns]\n",
+              "Open                float64\n",
+              "High                float64\n",
+              "Low                 float64\n",
+              "Close               float64\n",
+              "Adj Close           float64\n",
+              "Volume                int64\n",
+              "dtype: object"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#converting the string to datetime format\n",
         "stock['Date']=pd.to_datetime(stock[\"Date\"])"
       ],
@@ -390,7 +424,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YEjEUWJN9rRp",
-        "outputId": "fd935f95-65a4-4e2a-99bb-1ce646968545"
+        "outputId": "87089574-830b-4cb6-840e-1a3c202dc702"
       },
       "execution_count": 3,
       "outputs": [
@@ -415,7 +449,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xDk5244v-Mkv",
-        "outputId": "27631949-15f4-4a09-9350-3bd57ad2763b"
+        "outputId": "de664a90-d42c-4230-c639-08e4b356015a"
       },
       "execution_count": 4,
       "outputs": [
@@ -442,7 +476,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Y7vJgf1e-VFu",
-        "outputId": "30315011-8916-4513-98e3-ffe6b146f2ec"
+        "outputId": "28103ec8-b823-4740-da3e-13ade14cd412"
       },
       "execution_count": 5,
       "outputs": [
@@ -477,7 +511,7 @@
           "height": 300
         },
         "id": "JhRLH9xg-eJC",
-        "outputId": "38234a87-1859-4a7b-e512-d64d9fef139a"
+        "outputId": "61234cea-bf5c-4211-ffc9-92b9d8c7e2d3"
       },
       "execution_count": 6,
       "outputs": [
@@ -507,7 +541,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-98939d1d-c3e5-47cb-aeed-fa5655b1ee3a\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-bed7bc18-3d17-4f7a-8739-795dae914bad\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -622,7 +656,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-98939d1d-c3e5-47cb-aeed-fa5655b1ee3a')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-bed7bc18-3d17-4f7a-8739-795dae914bad')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -674,12 +708,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-98939d1d-c3e5-47cb-aeed-fa5655b1ee3a button.colab-df-convert');\n",
+              "        document.querySelector('#df-bed7bc18-3d17-4f7a-8739-795dae914bad button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-98939d1d-c3e5-47cb-aeed-fa5655b1ee3a');\n",
+              "        const element = document.querySelector('#df-bed7bc18-3d17-4f7a-8739-795dae914bad');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -699,8 +733,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-b4ecb170-5424-4184-97fd-5e5a3482499c\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-b4ecb170-5424-4184-97fd-5e5a3482499c')\"\n",
+              "<div id=\"df-5b210223-9744-448c-8919-4a4fa6ff0802\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-5b210223-9744-448c-8919-4a4fa6ff0802')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -819,7 +853,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-b4ecb170-5424-4184-97fd-5e5a3482499c button');\n",
+              "        document.querySelector('#df-5b210223-9744-448c-8919-4a4fa6ff0802 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -869,7 +903,7 @@
           "height": 472
         },
         "id": "ORrfNI8q_Ha6",
-        "outputId": "6815f4bd-e897-49f6-8abe-9391ac9851a1"
+        "outputId": "6d6fc700-4c6c-491d-ad3b-6bce54621af1"
       },
       "execution_count": 8,
       "outputs": [
@@ -902,7 +936,7 @@
           "height": 472
         },
         "id": "aMnWF2bBASHg",
-        "outputId": "21ff5188-80e2-442f-b7af-4460093b4b6f"
+        "outputId": "672fa508-320e-489f-e569-1b230ad47f58"
       },
       "execution_count": 9,
       "outputs": [
@@ -935,7 +969,7 @@
           "height": 472
         },
         "id": "J6xcF0BtD4Te",
-        "outputId": "b16af732-553b-4f7c-fc0c-2279a45ac457"
+        "outputId": "a61d7cf8-34a0-4b81-f94d-4f4d99936494"
       },
       "execution_count": 10,
       "outputs": [
@@ -968,7 +1002,7 @@
           "height": 472
         },
         "id": "DxNqrbTYD5Vj",
-        "outputId": "2a28d975-38fa-49a6-9ebe-2daf9f918be7"
+        "outputId": "b80c027c-5276-495a-e5bd-21ea90cfcd72"
       },
       "execution_count": 11,
       "outputs": [
@@ -1001,7 +1035,7 @@
           "height": 472
         },
         "id": "Qros2-kAD9ij",
-        "outputId": "f982288d-e1f1-4957-8214-a6adb93ecda2"
+        "outputId": "0515d579-0487-494d-c011-ba4a18a8806d"
       },
       "execution_count": 12,
       "outputs": [
@@ -1034,7 +1068,7 @@
           "height": 472
         },
         "id": "mxL6wtzcEChn",
-        "outputId": "a8c68c61-5eaf-4b81-89fd-16f4de589c87"
+        "outputId": "8b5a81e9-c663-48de-8d0b-2193c6bdd7fe"
       },
       "execution_count": 13,
       "outputs": [
@@ -1141,7 +1175,7 @@
       ],
       "metadata": {
         "id": "Ic0WygJFy-lx",
-        "outputId": "0c879399-3cb9-4743-cc68-4cd66804a450",
+        "outputId": "378396e1-9fb3-45f7-a733-3ce1b0815763",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 74
@@ -1172,12 +1206,12 @@
       ],
       "metadata": {
         "id": "HnjLvQsDzKxF",
-        "outputId": "ad5a00cc-cbb7-4b25-c9e7-d6b2d46aee24",
+        "outputId": "01d9009e-7e79-4805-9bc2-a8be7bc3bf55",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 31,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1197,7 +1231,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 31
+          "execution_count": 22
         }
       ]
     },
@@ -1227,7 +1261,7 @@
           "height": 472
         },
         "id": "OdCjTsH32D4c",
-        "outputId": "dfc9351c-1787-44d7-cd2d-26673b91344c"
+        "outputId": "73b7bab5-7993-4731-ec49-34af0f492233"
       },
       "execution_count": 23,
       "outputs": [
@@ -1260,7 +1294,7 @@
           "height": 472
         },
         "id": "H_Ii1g9d2yK5",
-        "outputId": "446ac0eb-1e84-42cc-a22f-2a019be606fd"
+        "outputId": "5e85fb72-f551-4f5b-e641-6ae688f67499"
       },
       "execution_count": 24,
       "outputs": [
@@ -1286,12 +1320,12 @@
       ],
       "metadata": {
         "id": "X0l2emDA6Qix",
-        "outputId": "2f89eb93-aa96-47a4-e933-95f4eba4d02e",
+        "outputId": "b5f70659-d2fc-4bbc-eaa5-7ebf462ff5db",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 34,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -1309,12 +1343,12 @@
       ],
       "metadata": {
         "id": "BGS23w9t66eJ",
-        "outputId": "c77e5412-fdd8-4c7d-8ac2-c0bdd03f8412",
+        "outputId": "b0a72f22-001f-4b00-a528-d63aa8a804d6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 33,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1324,7 +1358,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 33
+          "execution_count": 26
         }
       ]
     },
@@ -1334,7 +1368,7 @@
       "metadata": {
         "id": "A73yVj0EW78k"
       },
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": []
     }
   ]
